--- a/aggregation-functions/pom.xml
+++ b/aggregation-functions/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>mongo-spark-connector_2.12</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.12</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
